...
            "AI 绘画"
        case .images:
            "图片"
        case .music:
            "音乐"
        case .more:
            "更多"
        }
    }

    var systemImage: String {
        switch self {
        case .home:
...
